--- a/frontend/package.json
+++ b/frontend/package.json
@@ -15,10 +15,11 @@
     "@fontsource/playfair-display": "^5.2.6",
     "@tailwindcss/vite": "^4.1.11",
     "axios": "^1.10.0",
+    "clsx": "^2.1.1",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-hook-form": "^7.60.0",
-    "react-router": "^7.6.3",
+    "react-router-dom": "^7.7.0",
     "tailwindcss": "^4.1.11"
   },
   "devDependencies": {
