--- a/package.json
+++ b/package.json
@@ -1,8 +1,10 @@
 {
 	"devDependencies": {
-		"husky": "^9.1.7"
+		"husky": "^9.1.7",
+		"vite": "^7.1.3"
 	},
 	"scripts": {
-		"prepare": "husky"
+		"prepare": "husky",
+		"dev": "vite"
 	}
 }
